@@ -16,6 +16,7 @@ import org.eclipse.gef.commands.CommandStack;
 import org.eclipse.gef.commands.CompoundCommand;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.custom.StyledText;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Text;
 
@@ -26,9 +27,11 @@ import com.archimatetool.model.IAdapter;
 import com.archimatetool.model.IArchimateModel;
 import com.archimatetool.model.IArchimateModelObject;
 import com.archimatetool.model.IArchimatePackage;
+import com.archimatetool.model.IDocumentable;
 import com.archimatetool.model.IFeature;
 import com.archimatetool.model.IFeatures;
 import com.archimatetool.model.ILockable;
+import com.archimatetool.model.INameable;
 import com.archimatetool.model.util.LightweightEContentAdapter;
 
 
@@ -64,7 +67,7 @@ public abstract class AbstractECorePropertySection extends AbstractArchiProperty
             removeAdapter();
             
             // Get the correct EObjects
-            eObjects = getFilteredObjects(selection.toList());
+            eObjects = getFilteredObjects(selection.toArray());
             
             // Update section
             update();
@@ -111,7 +114,7 @@ public abstract class AbstractECorePropertySection extends AbstractArchiProperty
      * 
      * @return A list of filtered adaptable objects according to type
      */
-    private List<IArchimateModelObject> getFilteredObjects(List<?> objects) {
+    private List<IArchimateModelObject> getFilteredObjects(Object[] objects) {
         List<IArchimateModelObject> list = new ArrayList<>();
         
         IObjectFilter filter = getFilter();
@@ -128,16 +131,10 @@ public abstract class AbstractECorePropertySection extends AbstractArchiProperty
         }
         
         // Only use the objects that are in *one* model - the model in the first selected object
-        if(!list.isEmpty()) {
-            IArchimateModel firstModel = list.get(0).getArchimateModel();
-            
+        if(list.size() > 1) {
+            IArchimateModel firstModel = list.getFirst().getArchimateModel();
             // Remove objects with different parent models
-            for(int i = list.size() - 1; i >= 1; i--) {
-                IArchimateModelObject eObject = list.get(i);
-                if(eObject.getArchimateModel() != firstModel) {
-                    list.remove(eObject);
-                }
-            }
+            list.removeIf(eObject -> eObject.getArchimateModel() != firstModel);
         }
         
         return list;
@@ -248,27 +245,25 @@ public abstract class AbstractECorePropertySection extends AbstractArchiProperty
         // Text
         Text textControl = createSingleTextControl(parent, SWT.NONE);
         textControl.setMessage(hint);
+        PropertySectionTextControl textName = new PropertySectionTextControl(textControl, IArchimatePackage.Literals.NAMEABLE__NAME);
         
-        PropertySectionTextControl textName = new PropertySectionTextControl(textControl, IArchimatePackage.Literals.NAMEABLE__NAME) {
-            @Override
-            protected void textChanged(String oldText, String newText) {
-                if(getEObjects() != null) {
-                    CompoundCommand result = new NonNotifyingCompoundCommand(Messages.AbstractECorePropertySection_1);
+        textName.setOnTextChanged((oldText, newText) -> {
+            if(getEObjects() != null) {
+                CompoundCommand result = new NonNotifyingCompoundCommand(Messages.AbstractECorePropertySection_1);
 
-                    for(EObject eObject : getEObjects()) {
-                        if(isAlive(eObject)) {
-                            Command cmd = new EObjectFeatureCommand(Messages.AbstractECorePropertySection_1, eObject,
-                                    IArchimatePackage.Literals.NAMEABLE__NAME, newText);
-                            if(cmd.canExecute()) {
-                                result.add(cmd);
-                            }
+                for(EObject eObject : getEObjects()) {
+                    if(eObject instanceof INameable nameable && isAlive(nameable)) {
+                        Command cmd = new EObjectFeatureCommand(Messages.AbstractECorePropertySection_1, nameable,
+                                                                IArchimatePackage.Literals.NAMEABLE__NAME, newText);
+                        if(cmd.canExecute()) {
+                            result.add(cmd);
                         }
                     }
-
-                    executeCommand(result.unwrap());
                 }
+
+                executeCommand(result.unwrap());
             }
-        };
+        });
 
         return textName;
     }
@@ -281,30 +276,54 @@ public abstract class AbstractECorePropertySection extends AbstractArchiProperty
         createLabel(parent, Messages.AbstractECorePropertySection_2, ITabbedLayoutConstants.STANDARD_LABEL_WIDTH, SWT.NONE);
         
         // Text
-        StyledTextControl styledTextControl = createStyledTextControl(parent, SWT.NONE);
+        StyledTextControl styledTextControl = createStyledTextControl(parent, SWT.BORDER);
         styledTextControl.setMessage(hint);
         
-        PropertySectionTextControl textDoc = new PropertySectionTextControl(styledTextControl.getControl(), IArchimatePackage.Literals.DOCUMENTABLE__DOCUMENTATION) {
-            @Override
-            protected void textChanged(String oldText, String newText) {
-                if(getEObjects() != null) {
-                    CompoundCommand result = new CompoundCommand(Messages.AbstractECorePropertySection_3);
+        return createDocumentationPropertySectionTextControl(styledTextControl.getControl());
+    }
+    
+    /**
+     * Create a Documentation Markdown control
+     */
+    protected MarkdownControl createDocumentationMarkdownControl(Composite parent, String hint) {
+        // Label
+        createLabel(parent, Messages.AbstractECorePropertySection_2, ITabbedLayoutConstants.STANDARD_LABEL_WIDTH, SWT.NONE);
+        
+        // Markdown Control
+        MarkdownControl markDownControl = new MarkdownControl(parent, this);
+        markDownControl.setPropertySectionTextControl(markdownParent -> {
+            StyledTextControl styledTextControl = createStyledTextControl(markdownParent, SWT.NONE, true);
+            styledTextControl.setMessage(hint);
+            return createDocumentationPropertySectionTextControl(styledTextControl.getControl());
+        });
+        
+        return markDownControl;
+    }
+    
+    /**
+     * Create a PropertySectionTextControl for Documentation
+     */
+    protected PropertySectionTextControl createDocumentationPropertySectionTextControl(StyledText styledText) {
+        PropertySectionTextControl textControl = new PropertySectionTextControl(styledText, IArchimatePackage.Literals.DOCUMENTABLE__DOCUMENTATION);
+        
+        textControl.setOnTextChanged((oldText, newText) -> {
+            if(getEObjects() != null) {
+                CompoundCommand result = new CompoundCommand(Messages.AbstractECorePropertySection_3);
 
-                    for(EObject eObject : getEObjects()) {
-                        if(isAlive(eObject)) {
-                            Command cmd = new EObjectFeatureCommand(Messages.AbstractECorePropertySection_3 , eObject,
-                                    IArchimatePackage.Literals.DOCUMENTABLE__DOCUMENTATION, newText);
-                            if(cmd.canExecute()) {
-                                result.add(cmd);
-                            }
+                for(EObject eObject : getEObjects()) {
+                    if(eObject instanceof IDocumentable documentable && isAlive(documentable)) {
+                        Command cmd = new EObjectFeatureCommand(Messages.AbstractECorePropertySection_3 , documentable,
+                                IArchimatePackage.Literals.DOCUMENTABLE__DOCUMENTATION, newText);
+                        if(cmd.canExecute()) {
+                            result.add(cmd);
                         }
                     }
-
-                    executeCommand(result.unwrap());
                 }
+
+                executeCommand(result.unwrap());
             }
-        };
+        });
         
-        return textDoc;
+        return textControl;
     }
 }
